<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Général -->
    <string name="app_name" translatable="false">ShowMe</string>
    <string name="database" translatable="false">showme.db</string>
    <string name="param_database" translatable="false">params.db</string>

    <!-- Pas touche ! -->
    <string name="serveur" translatable="false">showme.capellari.net</string>

    <string name="url_lieux" translatable="false">https://%s/google/lieux/%f:%f/%d/</string>
    <string name="url_lieu" translatable="false">https://%s/google/lieu/%d/</string>
    <string name="url_rechr" translatable="false">https://%s/google/recherche/%f:%f/%d?texte=%s;maxd=%d</string>

    <string name="url_types" translatable="false">https://%s/google/types/</string>

    <string name="maps_api_key" translatable="false">AIzaSyCOQnGD6l0w4IphGBtG8TPTxcoyE-Cxt9k</string>

    <!-- Notification -->
    <string name="channel_name">ShowMe channel</string>

    <string name="notif_nombre_titre">ShowMe</string>
    <plurals name="notif_nombre_texte">
        <item quantity="one">%d lieu</item>
        <item quantity="other">%d lieux</item>
    </plurals>

    <!-- Accueil -->
    <!-- Panneau de navigation -->
    <string name="nav_accueil">Accueil</string>
    <string name="nav_recherche">Recherche</string>

    <string name="nav_perso">Personalisation</string>
    <string name="nav_types">Catégories</string>
    <string name="nav_parametres">Paramètres</string>

    <string name="nav_debogage">Débogage</string>
    <string name="nav_lieu">Lieu !</string>
    <string name="nav_bienvenue">Bienvenue !</string>

    <string name="nav_open">Ouvrir le panneau</string>
    <string name="nav_close">Fermer le panneau</string>

    <!-- Menu -->
    <string name="nav_refresh">Rafraîchir</string>

    <!-- Bienvenue -->
    <string name="bienvenue_activity">Bienvenue</string>
    <string name="bienvenue">Bienvenue dans ShowMe !</string>
    <string name="bienvenue_types">Choisissez les catégories qui vous intéressent :</string>
    <string name="bienvenue_fin">"C'est fini !"</string>
    <string name="bienvenue_bouton">Accéder à ShowMe</string>

    <!-- RayonFragment -->
    <string name="aff_rayon_defaut" translatable="false">10 m</string>

    <!-- FiltresFragment -->
    <string name="filtrer_types">Limiter à vos catégories préférées</string>

    <string name="status_texte">Seulement les lieux</string>
    <string-array name="status">
        <item><i>tous</i></item>
        <item>ouverts</item>
        <item>fermés</item>
    </string-array>
    <string name="status_ouvert">Ouvert</string>
    <string name="status_ferme">Fermé</string>

    <string name="note_texte">Note</string>
    <string-array name="node_mode">
        <item><i>toutes</i></item>
        <item>minimum</item>
        <item>egal</item>
        <item>maximum</item>
    </string-array>

    <!-- RésultatFragment -->
    <string name="liste_rafraichir">Rafraîchissez la liste !</string>
    <string name="liste_vide">"J'ai rien trouvé &#8230;"</string>
    <plurals name="liste_filtree">
        <item quantity="one">%d lieu filtré</item>
        <item quantity="other">%d lieux filtrés</item>
    </plurals>

    <!-- SelectType -->
    <string name="menu_select_title">Sélection</string>
    <string name="menu_select">Tout sélectionner</string>
    <string name="menu_deselect">Tout désélectionner</string>

    <!-- Recherches -->
    <!-- Champ de texte -->
    <string name="champ_hint">Quoi ?</string>

    <!-- Lieu -->
    <string name="inconnu">Inconnu</string>
    <string name="inconnus">Inconnus</string>
    <string name="distance">%d m</string>
    <string name="ouvert">Ouvert</string>
    <string name="ferme">Fermé</string>

    <!-- Types -->
    <string name="types_activity">Catégories visibles</string>
    <string name="nav_ajouter">Ajouter</string>
    <string name="nav_vider">Supprimer tout</string>

    <string name="dialog_vider_titre">Tout supprimer</string>
    <string name="dialog_vider_texte">Cette action ne peux pas être annulée.</string>

    <string name="msg_suppr">%s enlevé !</string>
    <string name="msg_annuler">Annuler</string>

    <!-- Préférences -->
    <string name="parametres_activity">Paramètres</string>

    <!-- Champs -->
    <string name="pref_rayon" translatable="false">RAYON</string>
    <string name="pref_rayon_max" translatable="false">RAYON MAX</string>

    <string name="pref_gps" translatable="false">GPS</string>
    <string name="pref_internet" translatable="false">INTERNET</string>

    <string name="pref_nombre" translatable="false">NOMBRE SERVICE</string>

    <string name="pref_bienvenue" translatable="false">BIENVENUE</string>

    <!-- "Fausses" préférences : apparaissent dans l'ecran de paramètre sans correspondre à un champ réel du fichier -->
    <string name="pref_cache" translatable="false">CACHE</string>
    <string name="pref_historique" translatable="false">HISTORIQUE</string>

    <!-- Texte -->
    <string name="pref_cat_recherche">Recherches</string>
    <string name="pref_txt_rayon_max">Rayon maximal</string>

    <string name="pref_cat_economie">Économies</string>
    <string name="pref_txt_gps">GPS</string>
    <string name="pref_txt_internet">Internet</string>

    <string name="pref_txt_cache">Vider le cache</string>
    <string name="pref_dialog_cache">"Vider le cache permet de libérer de l'espace de stockage, mais va ralentir les prochaines requêtes, et va augmenter l'utilisation d'internet."</string>
    <string name="pref_snackbar_cache">Cache vidé !</string>

    <string name="pref_txt_historique">"Vider l'historique"</string>
    <string name="pref_dialog_historique">Vous êtes sûr ?</string>

    <string name="pref_cat_service">Services</string>
    <string name="pref_txt_nombre">NombreService</string>

    <string name="pref_dialog">Confirmation</string>
    <string name="pref_dialog_internet">Désactiver internet empêche la mise à jour des données locales, le résultat des recherches sera donc incomplet, et les données seront peut-être invalides.</string>

    <!-- Bonus ! -->
    <string name="large_text" tools:keep="@string/large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
